--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-  "cSpell.language": "en,pt"
+  "cSpell.language": "en,pt",
+  "cSpell.words": [
+    "Bikcraft",
+    "Flexblog",
+    "Lescone",
+    "Renek",
+    "Surfbot",
+    "Wildbeast"
+  ]
 }
